--- a/investment-center.html
+++ b/investment-center.html
@@ -7,6 +7,7 @@ url:
 meta-description:
 heading: Invest in property
 paragraph: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+banner: /images/investment.jpeg
 link-1: /xproject
 photo-1: /food/stickyrice.jpg
 title-1: Food
