--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,7 @@ url:
 meta-description:
 heading: Recent Completed Projects
 paragraph: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+banner: /images/barryknoll-road3941-2.png
 link-1: /x-project
 photo-1: /food/stickyrice.jpg
 title-1: Food
