--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@ meta-description:
 <section class="grid-center">
   <section class="padded col-10">
     <div class="light-bg border">
-      <form action="https://formspree.io/jerome@jsib.co.za" method="POST" class="enquiry capped-width">
+      <form action="https://formspree.io/contact@vistaenterpriseinc.com" method="POST" class="enquiry capped-width">
         <div class="grid-center padded">
           <div class="col-12 centered">
             <h2 class="sm-bold"> Let's get in Touch </h2>
