--- a/investment-center.html
+++ b/investment-center.html
@@ -38,7 +38,7 @@ place-6: 3933 Barryknoll
 <section class="grid-center">
   <section class="padded col-10">
     <div class="light-bg border">
-      <form action="https://formspree.io/jerome@jsib.co.za" method="POST" class="enquiry capped-width">
+      <form action="https://formspree.io/contact@vistaenterpriseinc.com" method="POST" class="enquiry capped-width">
         <div id="invest"class="grid-center padded">
           <div class="col-12 centered">
             <h3 class="sm-bold"> Contact us for more information </h3>
