--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@ meta-description:
 
 <!-- form -->
 <section class="grid-center">
-  <section class="padded col-10">
+  <section class="padded col-10_sm-11">
     <div class="light-bg border">
       <form action="https://formspree.io/contact@vistaenterpriseinc.com" method="POST" class="enquiry capped-width">
         <div class="grid-center padded">
@@ -42,7 +42,7 @@ meta-description:
                 <option value="select"> Select </option>
                 <option value="Commercial"> Construction</option>
                 <option value="Domestic">Investing</option>
-                <input type="text" name="message" placeholder="Leave us a message (optional)" class="input-text margin-top">
+                <input type="text" name="message" placeholder="Leave a message (optional)" class="input-text margin-top">
                 <input type="submit" value="Send Message" class="button-solid">
               </div>
             </div>
