--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ belief-image: /images/jsib-values.jpg
 </section>
 
 <!-- gallery -->
-<section  id="gallery" class="grid-center">
+<section  id="gallery" class="grid-center mob-hide">
   <h2 class="col-12 centered">Gallery</h2>
   <div class="col-12_sm-9 multiple-items padded">
     <div class="col-1_sm-2_xs-4">
@@ -120,6 +120,9 @@ belief-image: /images/jsib-values.jpg
       <img src="images/gallery-size5.jpg">
     </div>
     <div class="col-1_sm-2_xs-4">
+      <img src="images/gallery-size16.jpg">
+    </div>
+    <div class="col-1_sm-2_xs-4">
       <img src="images/green.jpg">
     </div>
     <div class="col-1_sm-2_xs-4">
@@ -129,15 +132,75 @@ belief-image: /images/jsib-values.jpg
       <img src="images/gallery-size8.jpg">
     </div>
     <div class="col-1_sm-2_xs-4">
+      <img src="images/gallery-size17.jpg">
+    </div>
+    <div class="col-1_sm-2_xs-4">
       <img src="images/gallery-size9.jpg">
     </div>
     <div class="col-1_sm-2_xs-4">
       <img src="images/gallery-size13.jpg">
     </div>
-
+    <div class="col-1_sm-2_xs-4">
+      <img src="images/gallery-size18.jpg">
+    </div>
     <div class="col-1_sm-2_xs-4">
       <img src="images/gallery-size11.jpg">
     </div>
 
+  </div>
+</section>
+
+<!-- gallery -->
+<section  id="gallery" class="grid-center desktop-hide">
+  <h2 class="col-12 centered">Gallery</h2>
+  <div class="col-12_sm-9 two-items padded">
+    <div class="col-1_sm-2_xs-4">
+      <img src="images/gallery-size1.jpg">
+    </div>
+    <div class="col-1_sm-2_xs-4">
+      <img src="images/maroon.jpg">
+    </div>
+    <div class="col-1_sm-2_xs-4">
+      <img src="images/gallery-size2.jpg">
+    </div>
+    <div class="col-1_sm-2_xs-4">
+      <img src="images/gallery-size3.jpg">
+    </div>
+    <div class="col-1_sm-2_xs-4">
+      <img src="images/gallery-size4.jpg">
+    </div>
+    <div class="col-1_sm-2_xs-4">
+      <img src="images/gallery-size6.jpg">
+    </div>
+    <div class="col-1_sm-2_xs-4">
+      <img src="images/gallery-size5.jpg">
+    </div>
+    <div class="col-1_sm-2_xs-4">
+      <img src="images/gallery-size16.jpg">
+    </div>
+    <div class="col-1_sm-2_xs-4">
+      <img src="images/green.jpg">
+    </div>
+    <div class="col-1_sm-2_xs-4">
+      <img src="images/gallery-size7.jpg">
+    </div>
+    <div class="col-1_sm-2_xs-4">
+      <img src="images/gallery-size8.jpg">
+    </div>
+    <div class="col-1_sm-2_xs-4">
+      <img src="images/gallery-size17.jpg">
+    </div>
+    <div class="col-1_sm-2_xs-4">
+      <img src="images/gallery-size9.jpg">
+    </div>
+    <div class="col-1_sm-2_xs-4">
+      <img src="images/gallery-size13.jpg">
+    </div>
+    <div class="col-1_sm-2_xs-4">
+      <img src="images/gallery-size18.jpg">
+    </div>
+    <div class="col-1_sm-2_xs-4">
+      <img src="images/gallery-size11.jpg">
+    </div>
   </div>
 </section>
