--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ featured-image_path:
 url:
 meta-description:
 banner: /images/banner2.jpg
+story-img: /images/700losangels-1.png
 commercial-image: /images/electrician.jpg
 dommestic-image: /images/jsib-domestic.jpg
 values-image: /images/plantvalues.jpg
@@ -68,7 +69,7 @@ belief-image: /images/jsib-values.jpg
 <section id="story" class="light-bg grid-center padded">
     <h2 class="col-12 centered"> Our Story </h2>
   <div class="grid padded flex-flip">
-    <div class="col-5_sm-12 bg-image">
+    <div class="col-5_sm-12 bg-image"style="background-image:url({{page.story-img}}">
     </div>
     <div class="col-7_sm-12-middle padded">
       <h4 class="subtle-heading"> An experience awaits </h4>
