--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ featured-image_path:
 url:
 meta-description:
 banner: /images/banner2.jpg
-story-img: /images/700losangels-1.png
+story-img: /images/team-sm.jpg
 commercial-image: /images/electrician.jpg
 dommestic-image: /images/jsib-domestic.jpg
 values-image: /images/plantvalues.jpg
@@ -16,72 +16,80 @@ belief-image: /images/jsib-values.jpg
 
 <!-- banner -->
 <section class="banner grid-center" style="background-image:url({{page.banner}}">
-  <div class="col-6-middle centered">
-    <h1 class="big-bold"> This this a heading </h1>
-    <h3 class="sub-heading"> This is a sub-heading </h3>
+  <div class="col-6_sm-12-middle centered">
+    <h1 class="big-bold"> Full-service construction and development firm </h1>
+    <h3 class="sub-heading"> in Los Angeles, CA</h3>
   </div>
 </section>
 
 <!-- about vista -->
 <section id="about" class="padded centered ">
-  <h2> About Vista </h2>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <h2 class="fadein"> About Vista </h2>
+  <p class="left padded-sides"> <span class="fadein">Vista Enterprise, Inc, based in Sunny Los Angeles, delivers high quality building projects, specializing in hillside construction, detailing and space planning.</span> <span class="fadein">Vista Enterprise, Inc is a complete design, full-service construction company and development firm for both residential and commercial builds in Los Angeles.</span> <span class="fadein">As a full-service complete construction and development firm, we cater for all building needs from the ground up.</span><span class="fadein"> Whether you are interested in building your dream home, property investment, renovations,</span> <span class="fadein">remodelling, structural concrete, custom exterior finishes or even structural framing⎯Vista Enterprise, Inc is able to assist you.</span></p>
+
+  <p class="left padded-sides"><span class="fadein">Over the last 35 years, Vista Enterprise, Inc has served the greater Los Angeles area with a vital service that has contributed to what California is known for today⎯rich arcitecture, luxuary lifestyle and a state built on dream homes and high-end commercial offices. <br> <span class="fadein">With all the years of experience, we have become leaders and specialists in hillside construction, detailing and space planning.<span class="fadein"></p>
+
+  <p class="left fadein padded-sides"> At Vista Enterprise Inc, no job is too big or too small. </p>
 </section>
 
 <!-- vista services -->
 <section id="services"class="padded centered">
-  <h2> Our Services </h2>
+  <h2 class="fadein"> Our Services </h2>
   <div class="grid padded-1">
     <div class="col-4_sm-12 padded-1">
-      <i class="fas fa-mountain"></i>
-      <h4> Hillside Construction</h4>
-      <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+      <i class=" fadein fas fa-mountain"></i>
+      <h4 class="fadein"> Hillside Construction</h4>
+      <p class ="left"><span class="fadein">When it comes to hillside construction⎯and the complexities that are involved⎯you need the best for the job.</span><span class="fadein"> Vista Enterprise, Inc are leading experts in hillside construction with 35+ years experience, serving the earthquake prone greater Los Angeles area.</span><span class="fadein"> Hillside construction include building retaining walls, earthquake retrofitting, hillside stabilization, house bolting, and construction of concrete reinforcements and grade beams.</span> </p>
     </div>
     <div class="col-4_sm-12 padded-1">
-      <i class="fas fa-building"></i>
-      <h4> Structual Framing </h4>
-      <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <i class="fas fa-building fadein"></i>
+      <h4 class="fadein"> Structual Framing </h4>
+      <p class ="left"><span class="fadein">Every custom home or new build is unique and comes with its own architectural needs.</span><span class="fadein"> At Vista Enterprise, Inc, our many years of experience enables us to problem solve, efficiently and effectively. </span><span class="fadein">To ensure the success of this critical component of the construction process, our motto is resilience, reliability and durability⎯a construction company in Los Angeles, CA that</span><span class="fadein"> incorporates a step-by-step process ensuring that every detail will be taken care of with the highest degree of care.</span></p>
     </div>
     <div class="col-4_sm-12 padded-1">
-      <i class="fas fa-paint-brush"></i>
-      <h4> Exterior Finishes </h4>
-      <p>Irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+      <i class="fas fadein fa-home"></i>
+      <h4 class="fadein"> Commercial and residential development </h4>
+      <p class ="left"><span class="fadein">Whether you own a business in Los Angeles, CA or planning on building your dream home, Vista Enterprise, Inc understands the need of every project, and communicates each step of the build.</span><span class="fadein"> If you're looking for a ground up build or a re-modelling project, we take into consideration what the space will be used for so it can be fully optimized.</span><span class="fadein"> We're a construcyion company in Los Angeles that take into account timelines, feasibility and budget while never compromising on aesthetic beauty.</span></p>
     </div>
     <div class="col-4_sm-12 padded-1">
-      <i class="fas fa-paint-brush"></i>
-      <h4> Structual Concrete </h4>
-      <p>Irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+      <i class="fas fadein fa-file-alt"></i>
+      <h4 class="fadein padded-0"> Building consultations, architectural renderings, permits </h4>
+      <p class ="left"><span class="fadein">We are a full-service construction and development company. This means our firm understanding, knowledge and experience will make your dream a reality.</span><span class="fadein"> Setting up a consultation with us will be invaluable, as we're up-to-date with permits, city laws and details.</span><span class="fadein"> This makes construction completion as efficient as possible. Our team assists in making early decisions about your design, materials and overall construction plans.</span></p>
     </div>
     <div class="col-4_sm-12 padded-1">
-      <i class="fas fa-paint-brush"></i>
-      <h4> Exterior Finishes </h4>
-      <p>Irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+      <i class="fas fadein fa-hammer"></i>
+      <h4 class="fadein"> Renovations, exterior/interior finishes, space planning </h4>
+      <p class ="left"><span class="fadein">From optimizing space on a previous build, repairing existing walls to crafting custom exterior finishes, we provide services that give your build the "wow" factor.</span><span class="fadein"> On all renovations, renderings and exterior/interior finishes, our focus is constructions that last and face all weather-related circumstances. </span><span class="fadein">At Vista Enterprise, Inc we pride ourselves in detailed custom finishes to make your build unique, never compromising on safety, durability and functionality.</span></p>
     </div>
     <div class="col-4_sm-12 padded-1">
-      <i class="fas fa-paint-brush"></i>
-      <h4> Exterior Finishes </h4>
-      <p>Irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+      <i class="fas fa-truck fadein"></i>
+      <h4 class="fadein"> Structural concrete </h4>
+      <p class ="left"><span class="fadein">We are up-to-date on city permitting laws and details, making the completion of foundations efficient, safe and legal. </span><span class="fadein">Structural concrete is a vital component of a buildings integrity, therefore shortcuts should never be taken.</span><span class="fadein"> As an experienced construction company in Los Angeles, CA our expertize range from laying structural concrete on raw land to the replacement of leaning posts under your home, or bent girders under your commercial structure.</span></p>
     </div>
   </div>
 </section>
 
 <!-- vista story -->
 <section id="story" class="light-bg grid-center padded">
-    <h2 class="col-12 centered"> Our Story </h2>
+    <h2 class="col-12 centered fadein"> Our Story </h2>
   <div class="grid padded flex-flip">
-    <div class="col-5_sm-12 bg-image"style="background-image:url({{page.story-img}}">
+    <div class="col-5_sm-12 bg-image-mob-banner fadein"style="background-image:url({{page.story-img}}">
     </div>
-    <div class="col-7_sm-12-middle padded">
-      <h4 class="subtle-heading"> An experience awaits </h4>
-      <h3> This this a heading </h3>
-      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+    <div class="col-7_sm-12-middle padded-mob-non">
+      <h4 class="subtle-heading fadein"> It started with fascination </h4>
+      <h3 class="fadein"> An architect at 12-years-old</h3>
+      <p> <span class="fadein">The CEO and founder of Vista Enterprise, Inc, Raymond Munro from the age of 12 was fascinated with the concepts of architectural design and construction.</span><span class="fadein"> Today, that passion is a reflection of his work. </span><span class="fadein"> Raymond Munro is considered to be an expert in Hillside Investment, development and construction.</span> </p>
+
+      <p> <span class="fadein"> After graduating from architectural engineering School Raymond Munro started working for The Pacific Stock Exchange.</span><span class="fadein"> It was there that he acquired business administration and managerial experience, equipping him to have the know how to invest in the Stock Market. </span><span class="fadein">All which facilitated his long term goal, establishing his own Hillside Investment, development and construction firm.</span></p>
+
+      <p><span class="fadein">Vista Enterprise, Inc was created 35 years ago with the purpose to offer a variety of services, which meets all needs of the construction market. </span><span class="fadein">Our goal is to accompany our customers from the initial stage to the final completion of the project, while honouring all the necessary steps.</span></p>
 
     </div>
   </div>
 </section>
 
 <!-- vista team -->
-<section id="team" class="light-bg2 centered padded">
+<!-- <section id="team" class="light-bg2 centered padded">
   <h2> Our Team </h2>
   <div class="grid-center padded-1">
 
@@ -93,12 +101,12 @@ belief-image: /images/jsib-values.jpg
         <p>"I warmly welcome you to JP Residences. We are sure that you will be happy here."</p>
       </div>
     </div>
-</section>
+</section> -->
 
 <!-- gallery -->
-<section  id="gallery" class="grid-center mob-hide">
-  <h2 class="col-12 centered">Gallery</h2>
-  <div class="col-12_sm-9 multiple-items padded">
+<h2 id="gallery" class="col-12 centered padded-top fadein">Gallery</h2>
+<section   class="grid-center mob-hide ">
+  <div class="col-12_sm-9 fadein multiple-items padded">
     <div class="col-1_sm-2_xs-4">
       <img src="images/gallery-size1.jpg">
     </div>
@@ -152,9 +160,8 @@ belief-image: /images/jsib-values.jpg
 </section>
 
 <!-- gallery -->
-<section  id="gallery" class="grid-center desktop-hide">
-  <h2 class="col-12 centered">Gallery</h2>
-  <div class="col-12_sm-9 two-items padded">
+<section  class="grid-center padded-top desktop-hide">
+  <div class="col-12_sm-9 one-time fadein padded">
     <div class="col-1_sm-2_xs-4">
       <img src="images/gallery-size1.jpg">
     </div>
