--- a/investment-center.html
+++ b/investment-center.html
@@ -6,10 +6,9 @@ featured-image_path:
 url:
 meta-description:
 heading: Invest in property
-paragraph: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 button: Invest Now
 button-link: /investment-center#invest
-banner: /images/investment.jpg
+banner: /images/invest.jpg
 link-1: /malibu
 photo-1: /vista-ridge-malibu/ridge1.jpg
 title-1: Malibu
@@ -35,6 +34,12 @@ photo-6: /barryknoll-california-3933/barryknoll.jpg
 title-6: Los Angeles
 place-6: 3933 Barryknoll
 ---
+<section class="grid-center light-bg padded">
+  <div class= "col-8_sm-10 centered">
+  <p class="left"> Vista Enterprise, Inc has over 35 years of experience in the investment world. Investing in property development can increase your legacy in a secure, fast and intelligent way. Depending on the project, investing with Vista Enterprise, Inc can yield a return ranging between 55% and 100%, with investments starting as low as $40, 000.00 in Los Angeles, CA.</p>
+
+  <p class="left">Vista Enterprise, Inc is also pleased to offer you the amazing opportunity of overseas property investment on the amazing Island of Roatan in Honduras. The island of Roatan has been voted number 3, in the top 10 best islands of the world. Do you want your money to work for you? Vista Enterprise, Inc is accepting investors in Los Angeles, CA and Roatan, Honduras now. If you would like more information about how you can invest in your future, with the high returns that come with property development, do not hesitate to contact us. </p>
+</section>
 <section class="grid-center">
   <section class="padded col-10">
     <div class="light-bg border">
