--- a/contact.html
+++ b/contact.html
@@ -37,9 +37,8 @@ meta-description:
           <div class="col-10_sm-12">
             <h3 class="sm-bold">How can we help? </h3>
             <div class="floating-input">
-              <label for="attending"> What are you interested in?</label>
               <select name="attending" id="attending" required="">
-                <option value="select"> Select </option>
+                <option value="select"> What are you interested in? </option>
                 <option value="Commercial"> Construction</option>
                 <option value="Domestic">Investing</option>
                 <input type="text" name="message" placeholder="Leave a message (optional)" class="input-text margin-top">
@@ -53,6 +52,6 @@ meta-description:
 </section>
 <section id="map" class="padded grid-center centered">
   <div class="col-10_sm-12 border">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3875.6766754109817!2d100.55668581501979!3d13.73801460131369!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30e29f8c30e0558b%3A0xd813da81314f15f5!2sKing%20Code!5e0!3m2!1sen!2sla!4v1602247440306!5m2!1sen!2sla" width="100%" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6601.258514394284!2d-118.208126923297!3d34.18139534787022!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c21fa4a9b767%3A0x6681245916fc56ce!2sEmerald%20Isle%2C%20Glendale%2C%20CA!5e0!3m2!1sen!2sus!4v1607672664715!5m2!1sen!2sus" width="100%" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
   </div>
 </section>
