--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ belief-image: /images/jsib-values.jpg
 <section id="story" class="light-bg grid-center padded">
     <h2 class="col-12 centered fadein"> Our Story </h2>
   <div class="grid padded flex-flip">
-    <div class="col-5_sm-12 bg-image-mob-banner fadein"style="background-image:url({{page.story-img}}">
+    <div class="col-5_sm-12 bg-image-mob-banner"style="background-image:url({{page.story-img}}">
     </div>
     <div class="col-7_sm-12-middle padded-mob-non">
       <h4 class="subtle-heading fadein"> It started with fascination </h4>
