--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ belief-image: /images/jsib-values.jpg
     <div class="col-4_sm-12 padded-1">
       <i class=" fadein fas fa-mountain"></i>
       <h4 class="fadein"> Hillside Construction</h4>
-      <p class ="left"><span class="fadein">When it comes to hillside construction⎯and the complexities that are involved⎯you need the best for the job.</span><span class="fadein"> Vista Enterprise, Inc are leading experts in hillside construction with 35+ years experience, serving the earthquake prone greater Los Angeles area.</span><span class="fadein"> Hillside construction include building retaining walls, earthquake retrofitting, hillside stabilization, house bolting, and construction of concrete reinforcements and grade beams.</span> </p>
+      <p class ="left"><span class="fadein">When it comes to hillside construction⎯and the complexities that are involved⎯you need the best for the job.</span><span class="fadein"> Vista Enterprise, Inc are leading experts in hillside construction with 35+ years experience, serving the earthquake prone greater Los Angeles area.</span><span class="fadein"> Hillside construction includes building retaining walls, earthquake retrofitting, hillside stabilization, house bolting, and construction of concrete reinforcements and grade beams.</span> </p>
     </div>
     <div class="col-4_sm-12 padded-1">
       <i class="fas fa-building fadein"></i>
@@ -49,7 +49,7 @@ belief-image: /images/jsib-values.jpg
     <div class="col-4_sm-12 padded-1">
       <i class="fas fadein fa-home"></i>
       <h4 class="fadein"> Commercial and residential development </h4>
-      <p class ="left"><span class="fadein">Whether you own a business in Los Angeles, CA or planning on building your dream home, Vista Enterprise, Inc understands the need of every project, and communicates each step of the build.</span><span class="fadein"> If you're looking for a ground up build or a re-modelling project, we take into consideration what the space will be used for so it can be fully optimized.</span><span class="fadein"> We're a construcion company in Los Angeles that take into account timelines, feasibility and budget while never compromising on aesthetic beauty.</span></p>
+      <p class ="left"><span class="fadein">Whether you own a business in Los Angeles, CA or planning on building your dream home, Vista Enterprise, Inc understands the needs of every project, and communicates each step of the build.</span><span class="fadein"> If you're looking for a ground up build or a re-modelling project, we take into consideration what the space will be used for so it can be fully optimized.</span><span class="fadein"> We're a construcion company in Los Angeles that take into account timelines, feasibility and budget while never compromising on aesthetic beauty.</span></p>
     </div>
     <div class="col-4_sm-12 padded-1">
       <i class="fas fadein fa-file-alt"></i>
