--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ belief-image: /images/jsib-values.jpg
     <div class="col-4_sm-12 padded-1">
       <i class="fas fadein fa-file-alt"></i>
       <h4 class="fadein padded-0"> Building consultations, architectural renderings, permits </h4>
-      <p class ="left"><span class="fadein">We are a full-service construction and development company. This means our thorough understanding, knowledge and experience makes your dream a reality.</span><span class="fadein"> Setting up a consultation with us is invaluable, as we're up-to-date with obtaining permits, city laws and details.</span><span class="fadein"> Our team also assists in making early decisions about your design, materials and overall construction plans. This makes construction completion as efficient as possible.</span></p>
+      <p class ="left"><span class="fadein">We are a full-service construction and development company. This means our thorough understanding, knowledge and experience makes your dream a reality.</span><span class="fadein"> Setting up a consultation with us is invaluable, as we're up-to-date with obtaining permits, city laws and details.</span><span class="fadein"> Our team also assists in making early decisions about your design, materials and overall construction plans. This makes construction completion as efficient and cost effective as possible.</span></p>
     </div>
     <div class="col-4_sm-12 padded-1">
       <i class="fas fadein fa-hammer"></i>
