--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ belief-image: /images/jsib-values.jpg
 
       <p> <span class="fadein"> After graduating from architectural engineering School Raymond Munro started working for The Pacific Stock Exchange.</span><span class="fadein"> It was there that he acquired business administration and managerial experience, equipping him to obtain the know-how to invest in the stock market. </span><span class="fadein">All which facilitated his long term goal⎯establishing his own Hillside Investment, development and construction firm.</span></p>
 
-      <p><span class="fadein">Vista Enterprise, Inc was founded 35 years ago with the purpose of building beautiful homes while offering all services related to construction. </span><span class="fadein">Our goal is to accompany our customers from the initial stage to the final completion of the project, while honoring all the necessary steps.</span></p>
+      <p><span class="fadein">Vista Enterprise, Inc was founded 35 years ago with the purpose of building beautiful homes by offering all services related to construction. </span><span class="fadein">Having a firm understanding of the process from start to finish not only speeds up the project time, but also makes sure every requirement for each stage is complete before moving forward. Our goal is to accompany our customers from the initial stage to the final completion of the project, while honoring all the necessary steps.</span></p>
 
     </div>
   </div>
