--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@ meta-description:
 ---
 
 <!-- form -->
-<section class="grid-center">
+<section class="grid-center padded-top">
   <section class="padded col-10_sm-11">
     <div class="light-bg border">
       <form action="https://formspree.io/contact@vistaenterpriseinc.com" method="POST" class="enquiry capped-width">
