--- a/contact.html
+++ b/contact.html
@@ -52,6 +52,6 @@ meta-description:
 </section>
 <section id="map" class="padded grid-center centered">
   <div class="col-10_sm-12 border">
-    <iframe src=<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3300.576631694349!2d-118.20603744893116!3d34.18274048047532!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c21fb2e5e72d%3A0xd9a2073b8252e120!2s3169%20Kirkham%20Dr%2C%20Glendale%2C%20CA%2091206%2C%20USA!5e0!3m2!1sen!2sla!4v1607838486328!5m2!1sen!2sla"width="100%" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3300.576631694349!2d-118.20603744893116!3d34.18274048047532!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c21fb2e5e72d%3A0xd9a2073b8252e120!2s3169%20Kirkham%20Dr%2C%20Glendale%2C%20CA%2091206%2C%20USA!5e0!3m2!1sen!2sla!4v1607838486328!5m2!1sen!2sla"width="100%" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
   </div>
 </section>
