--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,9 @@
 ---
 layout: default
 title: Vista Enterprise | Contact
-meta-description:
-featured-image_path:
-url:
-meta-description:
+meta-description: Contact Vista Enterprise, Inc | a constrauction company in LA
+featured-image_path: /vista-ridge-malibu/ridge1.jpg
+url: 
 ---
 
 <!-- form -->
