--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,11 @@
 ---
 layout: default
-title: Vista Enterprise | Contact
-meta-description: Contact Vista Enterprise, Inc | a constrauction company in LA
+title: Vista Enterprise, Inc Construction Company | Contact
+meta-site-description: Contact Vista Enterprise, Inc | a constrauction company in LA
+twitter-title: Vista Enterprise | Contact
 featured-image_path: /vista-ridge-malibu/ridge1.jpg
-url: 
+meta-social-description: Contact Vista Enterprise, Inc | a constrauction company in LA
+url:
 ---
 
 <!-- form -->
