--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,12 @@
 ---
 layout: default
 title: Vista Enterprise, Inc Construction Company | Contact
-meta-site-description: Contact Vista Enterprise, Inc | a constrauction company in LA
+meta-site-description: Contact Vista Enterprise, Inc | a construction company in LA
 twitter-title: Vista Enterprise | Contact
 featured-image_path: /vista-ridge-malibu/ridge1.jpg
 meta-social-description: Contact Vista Enterprise, Inc | a constrauction company in LA
 url:
+meta-twitter-description:
 ---
 
 <!-- form -->
