--- a/projects.html
+++ b/projects.html
@@ -1,10 +1,12 @@
 ---
 layout: investment-project
-title: Vista Enterprise Inc | Construction
-meta-description:
-featured-image_path:
+title: Construction company for beautiful homes commercial buildings
+meta-site-description:Vista Enterprise, Inc based in sunny Los Angeles, CA is a complete design and full-service construction, development and Investment firm for both residential and commercial builds
+twitter-title: Vista Enterprise | Contact
+featured-image_path: /barryknoll-california/barryknoll0.jpg
+meta-social-description: Vista Enterprise, Inc based in sunny Los Angeles, CA is a complete design and full-service construction, development and Investment firm for both residential and commercial builds
 url:
-meta-description:
+meta-twitter-description: Vista Enterprise, Inc based in sunny Los Angeles, CA is a complete design and full-service construction, development and Investment firm for both residential and commercial builds
 heading: Recent Completed Projects
 button: View projects
 button-link: /projects#projects
