--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 ---
 layout: default
-title: Vista Enterprise Inc | Construction
-meta-description:
-featured-image_path:
+title: Vista Enterprise Inc | Full-service construction and development firm
+meta-site-description:Vista Enterprise, Inc based in sunny Los Angeles, CA is a complete design and full-service construction, development and Investment firm for both residential and commercial builds
+twitter-title: Full-service construction and development firm
+featured-image_path: /images/barryknoll-road3941-2.jpg
+meta-social-description: Vista Enterprise, Inc based in sunny Los Angeles, CA is a complete design and full-service construction, development and Investment firm for both residential and commercial builds
 url:
-meta-description:
+meta-twitter-description: Vista Enterprise, Inc based in sunny Los Angeles, CA is a complete design and full-service construction, development and Investment firm for both residential and commercial builds
 banner: /images/banner2.jpg
 story-img: /images/team-sm.jpg
 commercial-image: /images/electrician.jpg
