--- a/investment-center.html
+++ b/investment-center.html
@@ -1,10 +1,13 @@
 ---
 layout: investment-project
-title: Vista Enterprise Inc | Property Investment
-meta-description:
-featured-image_path:
+title: Property Investment with Vista Enterprise, Inc | Full-service construction and development firm
+meta-site-description: Vista Enterprise, Inc based in sunny Los Angeles, CA is a complete design and full-service construction, development and Investment firm for both residential and commercial builds
+twitter-title: Property Investment with Vista Enterprise, Inc | Full-service construction and development firm
+featured-image_path: //images/invest.jpg
+meta-social-description: Vista Enterprise, Inc based in sunny Los Angeles, CA is a complete design and full-service construction, development and Investment firm for both residential and commercial builds
 url:
-meta-description:
+meta-twitter-description: Vista Enterprise, Inc based in sunny Los Angeles, CA is a complete design and full-service construction, development and Investment firm for both residential and commercial builds
+heading: Recent Completed Projects
 heading: Invest in property
 button: Invest Now
 button-link: /investment-center#invest
