--- a/investment-center.html
+++ b/investment-center.html
@@ -1,10 +1,10 @@
 ---
 layout: investment-project
 title: Property Investment with Vista Enterprise, Inc | Full-service construction and development firm
-meta-site-description: Vista Enterprise, Inc based in sunny Los Angeles, CA is a complete design and full-service construction, development and Investment firm for both residential and commercial builds
+meta-site-description: Property investment opportunities in Los Angeles, CA and the amazing island of Roatan in Honduras
 twitter-title: Property Investment with Vista Enterprise, Inc | Full-service construction and development firm
 featured-image_path: //images/invest.jpg
-meta-social-description: Vista Enterprise, Inc based in sunny Los Angeles, CA is a complete design and full-service construction, development and Investment firm for both residential and commercial builds
+meta-social-description: Property investment opportunities in Los Angeles, CA and the amazing island of Roatan in Honduras
 url:
 meta-twitter-description: Vista Enterprise, Inc based in sunny Los Angeles, CA is a complete design and full-service construction, development and Investment firm for both residential and commercial builds
 heading: Recent Completed Projects
