--- a/investment-center.html
+++ b/investment-center.html
@@ -6,7 +6,7 @@ twitter-title: Property Investment with Vista Enterprise, Inc | Full-service con
 featured-image_path: //images/invest.jpg
 meta-social-description: Property investment opportunities in Los Angeles, CA and the amazing island of Roatan in Honduras
 url:
-meta-twitter-description: Vista Enterprise, Inc based in sunny Los Angeles, CA is a complete design and full-service construction, development and Investment firm for both residential and commercial builds
+meta-twitter-description: Property investment opportunities in Los Angeles, CA and the amazing island of Roatan in Honduras
 heading: Recent Completed Projects
 heading: Invest in property
 button: Invest Now
