--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,6 @@
 ---
 layout: investment-project
-title: Construction company for beautiful homes commercial buildings
+title: Construction company for beautiful homes and commercial buildings
 meta-site-description: Vista Enterprise, Inc based in sunny Los Angeles, CA is a complete design and full-service construction, development and Investment firm for both residential and commercial builds
 twitter-title: Construction company for beautiful homes commercial buildings
 featured-image_path: /barryknoll-california/barryknoll0.jpg
