--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Vista Enterprise Inc | Full-service construction and development firm
 meta-site-description: Vista Enterprise, Inc based in sunny Los Angeles, CA is a complete design and full-service construction, development and Investment firm for both residential and commercial builds
 twitter-title: Full-service construction and development firm
-featured-image_path: /images/barryknoll-road3941-2.jpg
+featured-image_path: /images/banner2.jpg"
 meta-social-description: Vista Enterprise, Inc based in sunny Los Angeles, CA is a complete design and full-service construction, development and Investment firm for both residential and commercial builds
 url:
 meta-twitter-description: Vista Enterprise, Inc based in sunny Los Angeles, CA is a complete design and full-service construction, development and Investment firm for both residential and commercial builds
