--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ---
 layout: default
 title: Vista Enterprise Inc | Full-service construction and development firm
-meta-site-description: Vista Enterprise, Inc based in sunny Los Angeles, CA is a complete design and full-service construction, development and Investment firm for both residential and commercial builds
+meta-site-description: Vista Enterprise, Inc based in sunny Los Angeles, CA is a complete design and full-service construction, development and investment firm for both residential and commercial builds
 twitter-title: Full-service construction and development firm
 featured-image_path: /images/banner2.jpg"
-meta-social-description: Vista Enterprise, Inc based in sunny Los Angeles, CA is a complete design and full-service construction, development and Investment firm for both residential and commercial builds
+meta-social-description: Vista Enterprise, Inc based in sunny Los Angeles, CA is a complete design and full-service construction, development and investment firm for both residential and commercial builds
 url:
-meta-twitter-description: Vista Enterprise, Inc based in sunny Los Angeles, CA is a complete design and full-service construction, development and Investment firm for both residential and commercial builds
+meta-twitter-description: Vista Enterprise, Inc based in sunny Los Angeles, CA is a complete design and full-service construction, development and investment firm for both residential and commercial builds
 banner: /images/banner2.jpg
 story-img: /images/team-sm.jpg
 ---
