--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@ twitter-title: Vista Enterprise | Contact
 featured-image_path: /vista-ridge-malibu/ridge1.jpg
 meta-social-description: Contact Vista Enterprise, Inc | a constrauction company in LA
 url:
-meta-twitter-description:
+meta-twitter-description: Contact Vista Enterprise, Inc a complete design and full-service construction, development and investment firm for both residential and commercial builds in Los Angeles, CA
 ---
 
 <!-- form -->
