--- a/projects.html
+++ b/projects.html
@@ -1,12 +1,12 @@
 ---
 layout: investment-project
 title: Construction company for beautiful homes and commercial buildings
-meta-site-description: Vista Enterprise, Inc based in sunny Los Angeles, CA is a complete design and full-service construction, development and investment firm for both residential and commercial builds
+meta-site-description: Vista Enterprise, Inc based in Los Angeles, CA is a complete design and full-service construction, development and investment firm for both residential and commercial builds
 twitter-title: Construction company for beautiful homes commercial buildings
 featured-image_path: /barryknoll-california/barryknoll0.jpg
-meta-social-description: Vista Enterprise, Inc based in sunny Los Angeles, CA is a complete design and full-service construction, development and investment firm for both residential and commercial builds
+meta-social-description: Vista Enterprise, Inc based in Los Angeles, CA is a complete design and full-service construction, development and investment firm for both residential and commercial builds
 url:
-meta-twitter-description: Vista Enterprise, Inc based in sunny Los Angeles, CA is a complete design and full-service construction, development and investment firm for both residential and commercial builds
+meta-twitter-description: Vista Enterprise, Inc based in Los Angeles, CA is a complete design and full-service construction, development and investment firm for both residential and commercial builds
 heading: Recent Completed Projects
 button: View projects
 button-link: /projects#projects
