--- a/investment-center.html
+++ b/investment-center.html
@@ -3,7 +3,7 @@ layout: investment-project
 title: Property Investment with Vista Enterprise, Inc | Full-service construction and development firm
 meta-site-description: Property investment opportunities in Los Angeles, CA and the amazing island of Roatan in Honduras
 twitter-title: Property Investment with Vista Enterprise, Inc | Full-service construction and development firm
-featured-image_path: //images/invest.jpg
+featured-image_path: /images/invest.jpg
 meta-social-description: Property investment opportunities in Los Angeles, CA and the amazing island of Roatan in Honduras
 url:
 meta-twitter-description: Property investment opportunities in Los Angeles, CA and the amazing island of Roatan in Honduras
