--- a/barryknoll-drive-3927.html
+++ b/barryknoll-drive-3927.html
@@ -1,13 +1,14 @@
 ---
 layout: projects
-title: Vista Enterprise Inc | Construction
-meta-description:
-featured-image_path:
+title: 3927 Barryknoll Drive | Construction by Vista Enterprise, Inc
+meta-site-description: Beautiful homes in Los Angeles, with stunning exterior and interior finishes.
+twitter-title: 3927 Barryknoll Drive | Construction by Vista Enterprise, Inc
+featured-image_path: /barryknoll-california/barryknoll1.jpg
 url:
-meta-description:
-project-name:
-main-paragraph:
-location:
+meta-social-description: Beautiful homes in Los Angeles, with stunning exterior and interior finishes.
+project-name: Barryknoll Drive 3927
+main-paragraph: Barryknoll Drive 3927
+location: Los Angeles, CA
 left-photo-link: /barryknoll-california/barryknoll1.jpg
 left-photo: /barryknoll-california/barryknoll1.jpg
 middle-photo-link: /barryknoll-california/barryknoll2.jpg
