--- a/barryknoll-drive-3941.html
+++ b/barryknoll-drive-3941.html
@@ -1,13 +1,13 @@
 ---
 layout: projects
-title: Vista Enterprise Inc | Construction
-meta-description:
-featured-image_path:
+title: 3941 Barryknoll Drive | Construction by Vista Enterprise, Inc
+meta-site-description: Beautiful homes in Los Angeles, with stunning exterior and interior finishes.
+twitter-title: 3941 Barryknoll Drive | Construction by Vista Enterprise, Inc
+featured-image_path: /barryknoll-california-3941/barryknoll1.jpg
 url:
-meta-description:
-project-name:
-main-paragraph:
-location:
+meta-social-description: Beautiful homes in Los Angeles, with stunning exterior and interior finishes.
+project-name: 3941 Barryknoll Drive
+location: Los Angeles, CA
 left-photo-link: /barryknoll-california-3941/barryknoll1.jpg
 left-photo: /barryknoll-california-3941/barryknoll1.jpg
 middle-photo-link: /barryknoll-california-3941/barryknoll2.jpg
