--- a/malibu.html
+++ b/malibu.html
@@ -1,13 +1,13 @@
 ---
 layout: projects
-title: Vista Enterprise Inc | Construction
-meta-description:
-featured-image_path:
+title: 2210 Ridge Drive | Construction by Vista Enterprise, Inc
+meta-site-description: Beautiful homes in Los Angeles, with stunning exterior and interior finishes.
+twitter-title: 2210 Ridge Drive  | Construction by Vista Enterprise, Inc
+featured-image_path: /vista-ridge-malibu/ridge0.jpg
 url:
-meta-description:
-project-name:
-main-paragraph:
-location:
+meta-social-description: Beautiful homes in Los Angeles, with stunning exterior and interior finishes.
+project-name: 2210 Ridge Drive
+location: Malibu, CA
 left-photo-link: /vista-ridge-malibu/ridge1.jpg
 left-photo: /vista-ridge-malibu/ridge1.jpg
 middle-photo-link: /vista-ridge-malibu/ridge2.jpg
