--- a/ocean-view-drive.html
+++ b/ocean-view-drive.html
@@ -1,13 +1,13 @@
 ---
 layout: projects
-title: Vista Enterprise Inc | Construction
-meta-description:
-featured-image_path:
+title: 2210 Ridge Drive | Construction by Vista Enterprise, Inc
+meta-site-description: Beautiful homes in Los Angeles, with stunning exterior and interior finishes.
+twitter-title: 2210 Ridge Drive  | Construction by Vista Enterprise, Inc
+featured-image_path: /ocean-view-malibu/oceanview1.jpg
 url:
-meta-description:
-project-name:
-main-paragraph:
-location:
+meta-social-description: Beautiful homes in Los Angeles, with stunning exterior and interior finishes.
+project-name: 26600 Ocean View Drive
+location: Malibu, CA
 left-photo-link: /ocean-view-malibu/oceanview1.jpg
 left-photo: /ocean-view-malibu/oceanview1.jpg
 middle-photo-link: /ocean-view-malibu/oceanview2.jpg
