--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,8 @@ layout: default
 title: Vista Enterprise, Inc Construction Company | Contact
 meta-site-description: Contact Vista Enterprise, Inc | a construction company in LA
 twitter-title: Vista Enterprise | Contact
-featured-image_path: /vista-ridge-malibu/ridge1.jpg
-meta-social-description: Contact Vista Enterprise, Inc | a constrauction company in LA
+featured-image_path: /images/vista-ridge-malibu/ridge1.jpg
+meta-social-description: Contact Vista Enterprise, Inc | a construction company in LA
 url:
 meta-twitter-description: Contact Vista Enterprise, Inc a complete design and full-service construction, development and investment firm for both residential and commercial builds in Los Angeles, CA
 ---
