--- a/losangeles.html
+++ b/losangeles.html
@@ -1,13 +1,13 @@
 ---
 layout: projects
-title: Vista Enterprise Inc | Construction
-meta-description:
-featured-image_path:
+title: 3060 Beckman Roa | Construction by Vista Enterprise, Inc
+meta-site-description: Beautiful homes in Los Angeles, with stunning exterior and interior finishes.
+twitter-title: 3060 Beckman Roa | Construction by Vista Enterprise, Inc
+featured-image_path: /beckman-losangeles/beckman1.jpg
 url:
-meta-description:
-project-name:
-main-paragraph:
-location:
+meta-social-description: Beautiful homes in Los Angeles, with stunning exterior and interior finishes.
+project-name: 3060 Beckman Road
+location: Los Angeles, CA
 left-photo-link: /beckman-losangeles/beckman1.jpg
 left-photo: /beckman-losangeles/beckman1.jpg
 middle-photo-link: beckman-losangeles/beckman2.jpg
